# ADMIET

./: CMakeLists.txt  LICENSE  README.md
include/: cmdlines.h  forest.h  interpolation.h  ode.h  optimizer.h  read.h  tool.h  wet.h
scripts/: Learn_realdata.sh  example.json  op.ini
scripts/python/: runall.sh  scripts1.py  scripts2.py  scripts3.py  scripts4.py
scripts/python/FStructure/: biomodel.py
scripts/python/comparisons/: run1.py  run2.py  run3.py  run4.py
scripts/python/data/: parameters_1.txt  parameters_2.txt  parameters_3.txt  parameters_4.txt
scripts/python/result/: result_1.txt  result_1_all.txt  result_1_comp.txt  result_2.txt  result_2_all.txt  result_2_comp.txt  result_3.txt  result_3_all.txt  result_3_comp.txt  result_4.txt  result_4_all.txt  result_4_comp.txt
scripts/python/visulization/: fig_diff.py
scripts/real_data/: data.txt  data_t.txt  data_x.txt
src/: CMakeLists.txt  func_treefile.cpp  functionfitting.cpp  ode_treefile.cpp  odefitting.cpp  test.cpp
src/interpolation/: CMakeLists.txt  interpolation.cpp
src/ode/: CMakeLists.txt  forest.cpp  forest_bio1.cpp  ode.cpp
src/read/: CMakeLists.txt  readdata.cpp  readtree.cpp
src/trash/: functionfitting.cpp
src/wet/: CMakeLists.txt  basis.cpp  loss.cpp  nodetype.cpp  operators.cpp  optimizer.cpp  tool.cpp  train.cpp  tree.cpp
